- invitation link creation, removal and displaying details are now all fully functional, from UI standpoint as well. - after creating an invitation link, it's details are immediately displayed. - placeholder invitation lists have been replaced with real ones - fixed details page to display more human-readable details - fixed other backend bugs

--- a/src/app/shared/components/invite-info/invite-info.component.css
+++ b/src/app/shared/components/invite-info/invite-info.component.css
@@ -7,7 +7,7 @@ div {
 
 mat-list-item {
   background-color: var(--basecolor-dark);
-  margin: 4px
+  margin: 4px 0;
 }
 
 span {
